<resources>
    <string name="app_name">Productos</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer el login</string>
    <string name="msg_btRegister">Boton para hacer el registro</string>
    <string name="msg_fallo_registro">Fallo al hacer un registro</string>
    <string name="msg_fallo_login">Fallo al ingresar a la app</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_producto">Productos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre_add">Nombre del producto</string>
    <string name="msg_descripcion_add">Descripcion del prodecuto</string>
    <string name="msg_categoria_add">Categoria del Producto</string>
    <string name="msg_precio_add">Precio del producto</string>
    <string name="msg_producto_add">Producto agregado</string>

    <string name="bt_add_producto">Agregar Producto</string>
</resources>